# danmi-browser-bridge

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: build-extension.yml  build-skill.yml  ci.yml  pages.yml
extension/: manifest.json
extension/inject-scripts/: THIRD_PARTY_LICENSES.md  snapshot.js
extension/src/: commander.js  config.example.js  connectedTabGroup.js  service_worker.js
extension/src/popup/: popup.css  popup.html  popup.js
scripts/: backup_db.py  ctl.py  install-client.sh  onboard.py
sdk/danmi_bridge/: __init__.py  command_client.py
server/: admin_ops.py  app.py  cli.py  cli_fmt.py  config.py  limiter.py  logging.py  main.py
server/api/: __init__.py  admin.py  audit.py  audit_user.py  command.py  devices.py  extension.py  health.py  metrics.py  onboard.py  pairing.py  popup_config.py  sessions.py
server/audit/: __init__.py  logger.py
server/auth/: __init__.py  dependencies.py  evaluate.py  network.py  tokens.py  validator.py
server/sessions/: __init__.py  manager.py
server/storage/: __init__.py  database.py  migrations.py  schema.sql
server/utils/: version.py
server/ws/: __init__.py  connection_manager.py  handler.py
skill/: SKILL.md
skill/references/: multi-user.md  onboard.md  operations.md  tips.md
tests/: test_cli.py  test_command_api_e2e.py  test_devices_api.py  test_pause_gate.py  test_security.py
web/: index.html  install.sh
web/admin/: index.html
web/audit/: index.html
